# data_sandbox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
goinit/: Makefile  go.mod  go.sum  main.go
goinit/group_indexer/: group_indexer.go  group_indexer_test.go
goinit/initializer/: arrow_schema.go  arrow_schema_test.go  arrow_writer.go  cost_center_test.go  cost_centers.go  data_row.go  employees.go  generator.go  generator_test.go  working_time.go
goinit/timer/: timer.go
src/data_sandbox/: args.py  init_data.py  logger.py  logging.py
tests/unit/: test_init_data.py
