[tool.poetry]
name = "data-sandbox"
version = "0.1.0"
description = "Experiments in Data Warehousing and Analytics"
authors = ["Adrian Grzemski <adrian.grzemski@gmail.com>"]
license = "MIT Licence"
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
polars = "1.17.1"
faker = "^33.1.0"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.8.3"
isort = "^5.13.2"
pylint = "^3.3.2"

[tool.poetry.scripts]

init_data = "data_sandbox.init_data:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src", "scripts"]
disallow_untyped_calls = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
skip_glob = ["tests"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[tool.black]
line-length = 79
target-version = ["py311"]
